adding successful evn for jenkins